--- a/web/velocity/src/app/app.component.html
+++ b/web/velocity/src/app/app.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" routerLink="/sign-in" routerLinkActive="active">Sign in</a>
       </li>
       <li class="nav-item" *ngIf="this.apiService.isAuthenticated()">
-        <a class="nav-link" routerLink="/manage-projects" routerLinkActive="active">Projects</a>
+        <a class="nav-link" routerLink="/projects" routerLinkActive="active">Projects</a>
       </li>
     </ul>
   </div>
