--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -7,7 +7,7 @@
 .sk-three-bounce .sk-child {
   width: 14px;
   height: 14px;
-  background-color: #333;
+  background-color: #fff;
   border-radius: 100%;
   display: inline-block;
   -webkit-animation: sk-three-bounce 1.4s ease-in-out 0s infinite both;
