--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -130,3 +130,15 @@ h1 {
 .first-row {
   margin-top: 15px;
 }
+
+.breadcrumb-container {
+  background-color: rgba(52, 58, 64, 0.9) !important;
+  .breadcrumb {
+    background-color: rgba(52, 58, 64, 0.1) !important;
+
+    a {
+      color: white;
+    }
+
+  }
+}
