--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -59,6 +59,7 @@
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
   padding-top: 3.5rem;
+  min-width: 576px;
 }
 
 /*
