[web] Added a little bit of styling so commit messages on commit page dont go on to multiple lines

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -162,3 +162,9 @@ h1 {
   line-height: inherit;
   vertical-align: inherit;
 }
+
+.text-overflow {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
