[web] Layout tweak and fixed task page breadcrumb

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -172,3 +172,20 @@ h1 {
 .collapse-header {
   cursor: pointer;
 }
+
+
+.display-5 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1.1;
+}
+.display-6 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  line-height: 1.1;
+}
+.display-7 {
+  font-size: 1.5rem;
+  font-weight: 300;
+  line-height: 1.1;
+}
