--- a/docs/velocity/layouts/_default/baseof.html
+++ b/docs/velocity/layouts/_default/baseof.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
 </head>
 
-<body>
+<body class="bg-primary text-white">
     {{ partial "nav.html" . }}
 
     <main role="main" class="container">
