--- a/docs/velocity/layouts/partials/nav.html
+++ b/docs/velocity/layouts/partials/nav.html
@@ -1,9 +1,25 @@
-<nav class="navbar navbar-expand-md">
+<nav class="navbar navbar-expand-md navbar-dark">
     <div class="container">
         <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item {{ if eq .Page.URL "/"}}active{{ end }}">
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <!-- <li class="nav-item {{ if hasPrefix .Page.URL "/features"}}active{{ end }}">
+                <a class="nav-link" href="/features">Features</a>
+              </li> -->
+              <li class="nav-item {{ if hasPrefix .Page.URL "/docs"}}active{{ end }}">
+                <a class="nav-link" href="/docs">Docs</a>
+              </li>
+              <!-- <li class="nav-item {{ if hasPrefix .Page.URL "/about"}}active{{ end }}">
+                <a class="nav-link" href="/about">About</a>
+              </li> -->
+            </ul>
+          </div>
     </div>
 </nav>
