[docs] Copied getbootstrap.com docs sidebar and layout. Tweak in future, and added initial pages for docs

--- a/docs/velocity/layouts/docs/single.html
+++ b/docs/velocity/layouts/docs/single.html
@@ -1,13 +1,14 @@
-{{ define "title" }}Docs | Velocity CI{{ end }} {{ define "main" }}
+{{ define "title" }}{{ .Title }} | Docs | Velocity CI> {{ .Title }}{{ end }} {{ define "main" }}
 
 <div class="container-fluid">
     <div class="row flex-xl-nowrap">
         {{ partial "docs-nav.html" . }}
         <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 bd-content" role="main">
-            <!-- <h1 class="bd-title">Docs</h1> -->
-            <p class="bd-lead">Welcome to Velocity CI!</p>
+            <h2>{{ .Title}}</h2>
+            <p>{{ .Content }}</p>
         </main>
     </div>
 </div>
+
 
 {{ end }}
