--- a/docs/velocity/layouts/section/features.html
+++ b/docs/velocity/layouts/section/features.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Velocity CI | Features{{ end }} {{ define "main" }}
+{{ define "title" }}Features | Velocity CI{{ end }} {{ define "main" }}
 
 <div class="container">
     <div class="row" style="margin-bottom:4em;">
