--- a/docs/velocity/layouts/partials/nav.html
+++ b/docs/velocity/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md {{ if ne .Page.URL "/"}}navbar-dark bg-dark{{ else }}navbar-light{{ end }}">
     <div class="container">
         <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
