--- a/docs/velocity/layouts/section/about.html
+++ b/docs/velocity/layouts/section/about.html
@@ -1,4 +1,4 @@
-{{ define "title" }}Velocity CI | About{{ end }} {{ define "main" }}
+{{ define "title" }}About | Velocity CI{{ end }} {{ define "main" }}
 
 <div class="container">
     <div class="row" style="margin-bottom:4em;">
