--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -86,7 +86,7 @@ Branch filter
     padding: 0.25rem 2.5rem;
   }
   i.fa {
-    position: absolute;;
+    position: absolute;
     left: 12px;
     margin-top: 5px;
   }
@@ -98,7 +98,7 @@ Branch filter
 
 .sidebar {
   position: fixed;
-  top: 106px;
+  top: 56px;
   bottom: 0;
   left: 0;
   z-index: 1000;
@@ -143,39 +143,6 @@ Branch filter
   padding-bottom: 1.5rem;
 }
 
-
-.breadcrumb {
-  border-radius: 0;
-}
-
-.default-margin-bottom {
-  margin-bottom: 15px;
-}
-
-.default-margin-top {
-  margin-top: 15px;
-}
-
-.breadcrumb-container {
-  background-color: #4E545A !important;
-  position: fixed;
-  height: 50px;
-  width: 100%;
-  z-index: 2;
-
-  .breadcrumb {
-    background-color: #4E545A !important;
-
-    a {
-      color: white;
-    }
-
-  }
-}
-
-.project-content-container {
-  margin-top: 50px;
-}
 
 .btn-cancel-delete {
   padding: 0;
