[web] WIP of skinny sidebar Bitbucket style

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -1,5 +1,6 @@
+//@import "~bootswatch/dist/yeti/_variables.scss";
 @import "~bootstrap/scss/bootstrap.scss";
-
+//@import "~bootswatch/dist/yeti/_bootswatch.scss";
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome.scss";
 
