--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -117,7 +117,7 @@ Project container
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1;
   padding-top:1rem;
   //overflow-x: hidden;
   //overflow-y: auto;
@@ -128,7 +128,49 @@ Project container
   }
 
   .popover {
-    width: 84px;
+    width: 135px;
+  }
+
+}
+
+.menu-toggle-dropdown {
+
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 75px;
+  margin: 0;
+  border: 0;
+  padding: 0;
+  z-index: 10;
+
+  .btn {
+    width: 46px;
+    height: 46px;
+    padding: 6px 0;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 23px;
+    line-height: 1.42857;
+  }
+
+  .dropdown-toggle::before {
+    font: normal normal normal #{$fa-font-size-base}/#{$fa-line-height-base} FontAwesome; // shortening font declaration
+    font-size: inherit; // can't have font-size inherit on line above, so need to override
+    text-rendering: auto; // optimizelegibility throws things off #1094
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    content: $fa-var-cogs;
+  }
+
+  .dropdown-toggle::after {
+    display:none;
+  }
+
+  .fa {
+    position: relative;
+    z-index: 0;
+    color: black;
   }
 
 }
