[web] Added project form in modal to the homepage, which should replace the projects page completely

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -100,9 +100,9 @@ Branch filter
 }
 
 /*
-Project container
+Content container
  */
-.project-content-container {
+.content-container {
   position:relative;
   margin-left: 75px;
 }
