[web] Replaced BranchFilter with more generic DropdownFilter

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -88,7 +88,7 @@ h1 {
 Branch filter
  */
 
-.branch-filter-dropdown {
+.item-filter-dropdown {
   .dropdown-item {
     padding: 0.25rem 2.5rem;
   }
