[web] Added auto-scrolling to a build output when at the bottom of a page

--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -480,26 +480,30 @@ Toasts
   animation-name: fadeOutRightBig;
 }
 
+#build-output-container {
+  overflow: scroll;
+}
+
 // tabs
 
-.nav-tabs {
-  overflow-x: auto;
-  overflow-y: hidden;
-  display: -webkit-box;
-  display: -moz-box;
-}
-.nav-tabs>li {
-  float: none;
-}
-
-// pills
-
-.nav-pills {
-  overflow-x: auto;
-  overflow-y: hidden;
-  display: -webkit-box;
-  display: -moz-box;
-}
-.nav-pills>li {
-  float: none;
-}
+//.nav-tabs {
+//  overflow-x: auto;
+//  overflow-y: hidden;
+//  display: -webkit-box;
+//  display: -moz-box;
+//}
+//.nav-tabs>li {
+//  float: none;
+//}
+//
+//// pills
+//
+//.nav-pills {
+//  overflow-x: auto;
+//  overflow-y: hidden;
+//  display: -webkit-box;
+//  display: -moz-box;
+//}
+//.nav-pills>li {
+//  float: none;
+//}
