--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -232,6 +232,11 @@ Branch filter
   animation-fill-mode: both;
 }
 
+.quick-animated {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+}
+
 @keyframes bounceInRight {
   from, 60%, 75%, 90%, to {
     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
@@ -264,6 +269,34 @@ Branch filter
   animation-name: bounceInRight;
 }
 
+.slide-in {
+  transform: translateX(-100%);
+  animation: slide-in 0.5s forwards;
+  -webkit-animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+  animation: slide-out 0.5s forwards;
+  -webkit-animation: slide-out 0.5s forwards;
+}
+
+@keyframes slide-in {
+  100% { transform: translateX(0%); }
+}
+
+@-webkit-keyframes slide-in {
+  100% { -webkit-transform: translateX(0%); }
+}
+
+@keyframes slide-out {
+  0% { transform: translateX(0%); }
+  100% { transform: translateX(-100%); }
+}
+
+@-webkit-keyframes slide-out {
+  0% { -webkit-transform: translateX(0%); }
+  100% { -webkit-transform: translateX(-100%); }
+}
 @keyframes fadeOutRightBig {
   from {
     opacity: 1;
