--- a/docs/velocity/layouts/partials/nav.html
+++ b/docs/velocity/layouts/partials/nav.html
@@ -1,28 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container">
-        <a class="navbar-brand text-primary" href="/">{{ .Site.Title }}</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item {{ if eq .Page.URL "/"}}active{{ end }}">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <!-- <li class="nav-item {{ if hasPrefix .Page.URL "/features"}}active{{ end }}">
-                <a class="nav-link" href="/features">Features</a>
-              </li> -->
-              <li class="nav-item {{ if hasPrefix .Page.URL "/docs"}}active{{ end }}">
-                <a class="nav-link" href="/docs">Docs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://github.com/velocity-ci" target="_blank"><i class="fab fa-github"></i></a>
-              </li>
-              <!-- <li class="nav-item {{ if hasPrefix .Page.URL "/about"}}active{{ end }}">
-                <a class="nav-link" href="/about">About</a>
-              </li> -->
-            </ul>
-          </div>
+    <a class="navbar-brand text-primary" href="/">{{ .Site.Title }}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item {{ if hasPrefix .Page.URL "/docs"}}active{{ end }}">
+                <a class="nav-link" href="/docs"><i class="fas fa-book"></i> <span class="d">Docs</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/velocity-ci" target="_blank"><i class="fab fa-github"></i> <span class="d d-md-none">GitHub</span></a>
+            </li>
+        </ul>
     </div>
 </nav>
