--- a/web/velocity/src/styles.scss
+++ b/web/velocity/src/styles.scss
@@ -16,6 +16,10 @@ $fa-font-path: "~font-awesome/fonts";
 Branch filter
  */
 
+body, html {
+  width: 100%;
+  overflow-x: hidden;
+}
 
 
 .item-filter-dropdown {
